# ECE3574

./: README.md
project0-sc9ny/: CMakeLists.txt  Vagrantfile  main.cpp  synth.cpp  synth.h
project0-sc9ny/tests/: CMakeLists.txt  Test.cmake  compare.cpp  test0.csv  test1.csv  test10.csv  test11.csv  test12.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test8.csv  test9.csv
project1-sc9ny/: CMakeLists.txt  Vagrantfile  a.out  event.hpp  event_test.cpp  instrument.cpp  instrument.hpp  instrument_test.cpp  main.cpp  midi.cpp  midi_test.cpp  signal.cpp  signal_test.cpp  synthesizer1.cpp  synthesizer1.hpp  synthesizer_test.cpp  test_config.hpp.in  track.cpp  track_test.cpp  unittests.cpp  wav.cpp  wav.hpp  wav_test.cpp
project1-sc9ny/tests/: CMakeLists.txt  compare.cpp  test1.mid  test5.mid
project2-sc9ny/: CMakeLists.txt  event.cpp  event.hpp  interactive_instrument.cpp  interactive_instrument.hpp  main.cpp  qinstrument.cpp  qinstrument.hpp  signal.cpp  signal.hpp  test_config.hpp.in  test_qinstrument.cpp  track.cpp  track.hpp  wav.cpp  wav.hpp
project2-sc9ny/tests/: CMakeLists.txt  Test.cmake  compare.cpp
project3-sc9ny/: CMakeLists.txt  event.cpp  instrument.cpp  main.cpp  message_queue.cpp  message_queue.hpp  midi.cpp  midi.hpp  midiplayer.cpp  midiplayer.hpp  noise_generator.cpp  shared_double_buffer.cpp  shared_double_buffer.hpp  signal.cpp  signal.hpp  synthesizer.cpp  synthesizer.hpp  test_double_buffer.cpp  test_message_queue.cpp  test_midiplayer.cpp  test_pause.cpp  test_play.cpp  test_resume.cpp  test_stop.cpp  track.hpp
project3-sc9ny/aa/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  midiplayer  midiplayer_automoc.cpp  noise_generator  noise_generator.moc  test_double_buffer  test_double_buffer.moc  test_double_buffer_automoc.cpp  test_message_queue  test_message_queue.moc  test_message_queue_automoc.cpp  test_midiplayer  test_midiplayer.moc  test_midiplayer_automoc.cpp  test_pause  test_pause.moc  test_pause_automoc.cpp  test_play  test_play.moc  test_play_automoc.cpp  test_resume  test_resume.moc  test_resume_automoc.cpp  test_stop  test_stop.moc  test_stop_automoc.cpp
project3-sc9ny/aa/test_message_queue_automoc.dir/: moc_midiplayer_3ALOF3HH6XEO7C.cpp
project3-sc9ny/ex/: CMakeCache.txt
project3-sc9ny/tests/: Test.cmake  test2.mid  test3.mid  test6.mid
